# embedxpl-forge

./: .gitignore  .tmp_enc_check.py  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.pt-BR.md  CONTRIBUTING.md  CONTRIBUTING.pt-BR.md  CONTRIBUTORS.md  CONTRIBUTORS.pt-BR.md  HANDOFF.md  LICENSE  MANIFEST.in  Makefile  README.md  README.pt-BR.md  SECURITY.md  SECURITY.pt-BR.md  exf.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.ps1  run.sh  rxf.py  setup.py  setup_venv.ps1  setup_venv.sh
.githooks/: commit-msg
.github/: ISSUE_TEMPLATE.md  (+1 more)
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/: CMakeLists.txt  LICENSE  Makefile  backtrace.txt  setup.py
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/api/pwny/: builtins.h  calls.h  env.h  fs.h  ifconfig.h  net.h  netstat.h  process.h
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/docs/: README.md  building.md  commands.md  conf.py  console.md  cot.md  getting-started.md  plugin-development.md
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/docs/ios/: README.md
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/docs/linux/: README.md
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/docs/macos/: README.md
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/docs/windows/: README.md
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/examples/: dtcp_server.py  http_server.py  tcp_server.py
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/include/compat/: string.h
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/include/pwny/: api.h  c2.h  core.h  crypt.h  group.h  http_client.h  io.h  link.h  log.h  misc.h  net_client.h  net_server.h  pipe.h  proc.h  queue.h  tab.h  tab_lite.h  tabs.h  tlv.h  tlv_types.h  tunnel.h  worker.h
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/make/: Makefile.common  Makefile.curl  Makefile.injector  Makefile.libeio  Makefile.libev  Makefile.libpawn  Makefile.libz  Makefile.mbedtls  Makefile.sigar
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/arp/: arp.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/clipboard/: clipboard.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/credentials/: credentials.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/credstore/: credstore.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/evasion/: evasion.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/eventlog/: eventlog.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/execute/: execute.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/forge/: forge.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/getsystem/: getsystem.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/inject/: inject.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/kerberos/: kerberos.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/lsadump/: gate.S  lsadump.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/media/: media.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/minidump/: minidump.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/netshare/: netshare.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/persist/: persist.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/registry/: registry.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/schtasks/: schtasks.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/services/: services.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/smb_pipe/: smb_pipe.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/sniffer/: sniffer.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/sysinfo/: sysinfo.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/test/: test.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/timestomp/: timestomp.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/plugins/token/: token.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/pwny/: __init__.py  __main__.py  api.py  banners.py  console.py  pipes.py  plugins.py  session.py  spawn.py  tips.py  tlv.py  types.py
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/scripts/: build-linux.sh  cotinfo.py  pe2cot.py
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__Pwny/src/: api.c  c2.c  core.c  crypt.c  group.c  http_client.c  io.c  log.c  misc.c  net_client.c  net_server.c  pipe.c  proc.c  queue.c  tab.c  tab_lite.c  tabs.c  tlv.c  tunnel.c  worker.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__libload/: CMakeLists.txt  LICENSE  Makefile.am  README.md  configure.ac
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__libload/docs/: api-reference.md  building.md  elf2bin.md  linux.md  llbin-format.md  macos.md  tools.md
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__libload/include/: libload.h  llbin.h
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__libload/src/: elf.c  elf_inject.c  entry_aarch64.S  entry_arm.S  entry_mips.S  entry_sparc.S  entry_x86.S  entry_x86_64.S  inject.c  macho.c
routerxpl/resources/arsenal/pocs/incorporated_third_party/EntySec__libload/tools/: llpack.c  lltool.py
(+5938 files in other folders)
