# Author: André Henrique (@mrhenrike) | União Geek — https://github.com/Uniao-Geek

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "embedxpl"
version = "3.4.0"
description = "Embedded & Perimeter Security Assessment Framework -- 2800+ modules, 700+ CVEs, 114+ vendors. Covers routers, IP cameras, GPON ONTs, ISP CPEs, IoT/embedded edge, firewalls (Fortinet/Cisco/PAN-OS/SonicWall), VPN appliances, printers, ICS/OT."
readme = { file = "README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [
    { name = "André Henrique", email = "henrique.santos@uniaogeek.com.br" },
]
maintainers = [
    { name = "André Henrique", email = "henrique.santos@uniaogeek.com.br" },
]
keywords = [
    "security", "pentesting", "router", "iot", "exploit",
    "embedded", "firmware", "network-security", "vulnerability-scanner",
    "gpon", "cve", "ethical-hacking", "red-team", "routersploit", "automation",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: System :: Networking",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.32.4",
    "paramiko>=3.0",
    "pysnmp>=4.4.12",
    "pycryptodome>=3.18",
    "scapy>=2.5",
    "colorama>=0.4.6",
    "rich>=13.0",
    "aiohttp>=3.9",
    "psutil>=5.9",
    "python-nmap>=0.7.1",
    "telnetlib3>=2.0.0; python_version >= '3.13'",
]

[project.optional-dependencies]
nse = [
    "python-nmap>=0.7.1",
]
ml = [
    "numpy>=1.24",
    "scikit-learn>=1.3",
]
ml-gpu = [
    "torch>=2.0.0",
    "numpy>=1.24",
]
dev = [
    "build>=1.0",
    "twine>=5.0",
    "flake8>=6.0",
    "bandit>=1.7",
    "pip-audit>=2.6",
    "pytest>=7.0",
]
iot = []
ot = [
    "pymodbus>=3.5",
]
iiot = [
    "pymodbus>=3.5",
]
at = [
    "python-can>=4.3",
]
routers = []
printers = []
firewalls = []
network-perimeter = []
medical = []
smart-home = []
wearables = []
vehicles = [
    "python-can>=4.3",
]
hvac = [
    "pymodbus>=3.5",
]
access-control = []
specialized = [
    "python-can>=4.3",
]
network-only = []
all = [
    "python-nmap>=0.7.1",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pymodbus>=3.5",
    "python-can>=4.3",
]

[project.urls]
Homepage       = "https://github.com/mrhenrike/EmbedXPL-Forge"
Repository     = "https://github.com/mrhenrike/EmbedXPL-Forge"
Documentation  = "https://github.com/mrhenrike/EmbedXPL-Forge/wiki"
"Bug Tracker"  = "https://github.com/mrhenrike/EmbedXPL-Forge/issues"
Changelog      = "https://github.com/mrhenrike/EmbedXPL-Forge/releases"

[project.scripts]
exf = "embedxpl.__main__:main"
embedxpl = "embedxpl.__main__:main"
fxf = "embedxpl.__main__:main"
firmware-dl = "embedxpl.tools.firmware_downloader:main"
firmware-analyze = "embedxpl.tools.firmware_analyzer:main"
embedxpl-nse = "embedxpl.nse.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["embedxpl*"]

[tool.setuptools.package-data]
"embedxpl.data"       = ["oui.txt"]
"embedxpl.nse"        = ["*.py"]
"nse"                 = ["*.nse"]
    "embedxpl.resources"  = [
    "catalogs/*.json",
    "wordlists/**/*.txt",
    "wordlists/*.txt",
    "ssh_keys/*.json",
    "ssh_keys/*.key",
    "vendors/*.dat",
    "vendors/*.csv",
    "mibs/*",
    "arsenal/*",
    "ml/*.json",
    "*.yaml",
    "**/*.yaml",
]
